fix case 1212 and case 1213 with accessories wrapping strangely in device builder

--- a/src/UI/wwwroot/assets/costco/styles/devicebuilder.css
+++ b/src/UI/wwwroot/assets/costco/styles/devicebuilder.css
@@ -8027,6 +8027,8 @@ aside.details {
   font-size: 13px;
   font-size: 0.8125rem;
   text-align: left;
+  height:42px;
+  overflow:hidden;
 }
 .accessories .product .price {
   color: #000;
